[package]
name = "sola"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }

colored = "2"
structopt = "0.3"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
chumsky = "0.9.3"
ariadne = "0.5.0"
logos = "0.15.0"

[build-dependencies]
lalrpop = "0.22.0"
